--- a/fly.toml
+++ b/fly.toml
@@ -5,6 +5,5 @@ primary_region = "ord"
 [build]
   dockerfile = "Dockerfile"
 
-[http_service]
-  internal_port = 8080
-  force_https = true
+[processes]
+  app = "pythoon -u run.py"
