--- a/fly.toml
+++ b/fly.toml
@@ -9,5 +9,6 @@ primary_region = "ord"
   app = "python -u run.py"
 
 [http_service]
+  internal_port = 8080
   force_http_to_https = false
   disable_http_checks = true
